--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,13 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1em;
 }
 
 :root{
     --primary-color: #2b234a;
     --white: #fff;
     --black: #000;
-
+    --primary-font: 'Comic Neue', cursive;
+    --secondary-font: 'Balsamiq Sans', cursive;
 }
 
 /* globals */
@@ -56,19 +58,146 @@ body{
     grid-template-columns: repeat(2, 1fr);
 }
 
+/* Left section */
+.left-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-section-content h2{
+    font-family: var(--secondary-font);
+    font-size: 4em;
+    color: var(--primary-color);
+}
+
+.left-section-content h4{
+    font-family: var(--primary-font);
+    font-size: 2.7em;
+    color: var(--primary-color);
+}
+
+.left-section-content p{
+    font-family: var(--primary-font);
+    font-size: 1.3em;
+}
+
+.social-links ul{
+    list-style-type: none;
+    display: flex;
+}
+
+.social-links li{
+    font-size: 1.8em;
+    transition: all .5s ease;
+}
+
+.social-links li:nth-child(2){
+    margin: 0 10px;
+}
+
+.social-links li:hover{
+    transform: rotate(360deg);
+}
+
+.social-links ul li:first-child:hover a{
+    color: #333;
+}
+
+.social-links ul li:nth-child(2):hover a{
+    color: #0e76a8;
+}
+
+.social-links ul li:last-child:hover a{
+    color: #1DA1F2;
+}
+
+.social-links ul li a{
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+.tour-btn{
+    background: none;
+    border: none;
+    outline: none;
+    margin: 15px 0;
+}
+
+.tour-btn a{
+    color: var(--primary-color);
+    text-decoration: underline;
+    font-family: var(--primary-font);
+    font-weight: bold;
+    font-size: 1.3em;
+    text-transform: capitalize;
+    
+}
+
+.tour-btn a i{
+    margin-left: 10px;
+    margin-top: 5px;
+    animation: moveLeft infinite 5s linear;
+    font-size: 0.8em;
+}
+
+@keyframes moveLeft {
+    /* from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(10px);
+    } */
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+    40% {
+        -webkit-transform: translateX(-5px);
+        transform: translateX(-5px);
+    }
+    60% {
+        -webkit-transform: translateX(-7px);
+        transform: translateX(-7px);
+    }
+}
+
+
 /* right part */
 .hand-img{
-    /* overflow: hidden; */
-    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .hand-img img{
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 900px;
-    height: 900px;
-    transform: translate(-30%);
+    height: 65%;
+    width: 65%;
+}
+
+
+
+/* Footer */
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+}
+
+footer p{
+    text-align: center;
+    font-family: var(--primary-font);
+    color: var(--primary-color);
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+footer p a{
+    color: var(--primary-color);
+    text-decoration: none;
 }
