--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -47,13 +47,90 @@ body{
 
 .hamburger-menu{
     cursor: pointer;
+    color: var(--primary-color);
+    transition: all .5s ease;
+}
+
+.hamburger-menu:hover, .hamburger-menu:focus{
+    transform: rotate(360deg);
 }
 
 /* Nav bar end */
 
+/* Menu */
+.menu{
+    /* display: none; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    background-color: rgba(43, 35, 74, 0.9);
+    transition: all .5s ease;
+}
+
+.close-section{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.close{
+    font-size: 2.2em;
+    color: var(--white);
+    transition: all .5s ease;
+}
+
+.close:hover{
+    transform: rotate(360deg);
+}
+
+.menu-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+}
+
+.menu-items ul{
+    list-style-type: none;
+}
+
+.menu-items ul li{
+    padding: 10px 0;
+    text-align: center;
+}
+
+.menu-items ul li:first-child{
+    padding-top: 0;
+}
+
+.menu-items ul li:last-child{
+    padding-bottom: 0;
+}
+
+.menu-items ul li a{
+    text-decoration: none;
+    color: var(--white);
+    font-family: var(--primary-font);
+    font-size: 2em;
+    font-weight: bold;
+    text-transform: capitalize;
+    
+
+}
 
 /* Home section */
-.home-content{
+.home-content, .about-content{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -178,6 +255,20 @@ body{
     height: 65%;
     width: 65%;
 }
+
+/* About page */
+.about-content .hand-img{
+    justify-content: center;
+}
+
+.about-content .hand-img img{
+    height: 33%;
+    width: 33%;
+    margin-left: 10%;
+}
+
+/* projects */
+.projects
 
 
 
