--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -59,7 +59,6 @@ body{
 
 /* Menu */
 .menu{
-    /* display: none; */
     position: absolute;
     top: 0;
     left: 0;
@@ -67,10 +66,6 @@ body{
     bottom: 0;
     height: 100%;
     width: 100%;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
     background-color: rgba(43, 35, 74, 0.9);
     transition: all .5s ease;
 }
@@ -130,7 +125,7 @@ body{
 }
 
 /* Home section */
-.home-content, .about-content{
+.home-content, .about-content, .contact-content{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -399,6 +394,27 @@ body{
 
 .view-live{
     margin-left: 6px;
+}
+
+.see-more-area{
+    width: 60%;
+}
+
+.see-more-area .tour-btn{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/* contact */
+
+.contact-content .hand-img img{
+    width: 50%;
+    height: 50%;
+}
+
+.send-email-btn{
+    color: var(--primary-color);
 }
 
 
