--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -64,7 +64,7 @@ body{
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: rgba(43, 35, 74, 0.9);
     transition: all .5s ease;
