fixed responsive bugs

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -446,6 +446,10 @@ footer p a{
         margin: 8% 0;
     }
 
+    .projects-content{
+        margin: 8% 0;
+    }
+
     .contact-content{
         margin: 45% 0;
     }
